--- a/beet.yaml
+++ b/beet.yaml
@@ -2,7 +2,7 @@ id: transportduct
 name: TransportDuct
 version: "0.0.0"
 description: transportduct
-author: author
+author: AirDox_
 
 meta:
   mc_supports: ["1.20","1.20.1"]
@@ -13,14 +13,16 @@ meta:
       versioning:
         type: "normal"
         prefix: "#smithed.custom_block"
-    - id: "airdox_:itemio"
-      version_: "0.5.4"
+    - id: "smithed:crafter"
+      version_: "0.2.0"
       versioning:
         type: "normal"
-        prefix: "#itemio"
-        
+        prefix: "#smithed.crafter"
+
+
 pipeline:
   - airdox_.test_load_generator
+  - airdox_.cache_dependencies
 
 data_pack:
   load: [.]
