--- a/beet.yaml
+++ b/beet.yaml
@@ -4,6 +4,8 @@ version: "0.0.0"
 description: transportduct
 author: AirDox_
 
+output: "build"
+
 meta:
   mc_supports: ["1.20","1.20.1"]
   mc_supports_dataversion: [3463,3465]
