--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-smithed-libraries = {git = "https://github.com/edayot/Libraries.git"}
-smithed= "0.13.2"
-python-semantic-release = "^7.32.2"
-cryptography = "^39.0.1"
+smithed-libraries = {git = "https://github.com/edayot/Libraries.git", branch = "1.20.4"}
+smithed= {git = "https://github.com/Smithed-MC/smithed-python.git", branch = "main"}
+cryptography = "^41.0.0"
+tqdm = "^4.66.1"
 
 [build-system]
 requires = ["poetry-core"]
