--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,12 @@ jobs:
           fetch-depth: 0
       - name: Setup Python 3.11
         uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          version: 1.3.1
+          version: 1.6.1
           virtualenvs-create: true
           virtualenvs-in-project: true
       - name: Setup cache for dependencies
@@ -46,18 +48,22 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "action@github.com"
           if [ "$VERSION_BUMP" = "automatic" ]; then
-            poetry run semantic-release publish -v DEBUG -D commit_author="github-actions <action@github.com>";
+            poetry run semantic-release -v version ;
+            poetry run semantic-release -v publish ;
             exit;
           fi
           if [ "$VERSION_BUMP" = "patch" ]; then
-            poetry run semantic-release publish -v DEBUG -D commit_author="github-actions <action@github.com>" --patch;
+            poetry run semantic-release -v version --patch;
+            poetry run semantic-release -v publish ;
             exit;
           fi
           if [ "$VERSION_BUMP" = "minor" ]; then
-            poetry run semantic-release publish -v DEBUG -D commit_author="github-actions <action@github.com>" --minor;
+            poetry run semantic-release -v version --minor;
+            poetry run semantic-release -v publish ;
             exit;
           fi
           if [ "$VERSION_BUMP" = "major" ]; then
-            poetry run semantic-release publish -v DEBUG -D commit_author="github-actions <action@github.com>" --major;
+            poetry run semantic-release -v version --major;
+            poetry run semantic-release -v publish ;
             exit;
           fi
